@@ -34,7 +34,7 @@ module ActiveMerchant #:nodoc:
           end
         end
 
-        commit(:sale, request)
+        commit(:sale, request, money)
       end
 
       def authorize(money, payment_method, options={})
@@ -45,11 +45,11 @@ module ActiveMerchant #:nodoc:
           end
         end
 
-        commit(:authorization, request)
+        commit(:authorization, request, money)
       end
 
       def capture(money, authorization, options={})
-        transaction_id, _ = split_authorization(authorization)
+        transaction_id, _, _ = split_authorization(authorization)
 
         request = build_xml_request do |doc|
           add_authentication(doc)
@@ -60,7 +60,7 @@ module ActiveMerchant #:nodoc:
           end
         end
 
-        commit(:capture, request)
+        commit(:capture, request, money)
       end
 
       def credit(money, authorization, options = {})
@@ -69,7 +69,7 @@ module ActiveMerchant #:nodoc:
       end
 
       def refund(money, authorization, options={})
-        transaction_id, _ = split_authorization(authorization)
+        transaction_id, _, _ = split_authorization(authorization)
 
         request = build_xml_request do |doc|
           add_authentication(doc)
@@ -91,12 +91,13 @@ module ActiveMerchant #:nodoc:
       end
 
       def void(authorization, options={})
-        transaction_id, kind = split_authorization(authorization)
+        transaction_id, kind, money = split_authorization(authorization)
 
         request = build_xml_request do |doc|
           add_authentication(doc)
           doc.send(void_type(kind), transaction_attributes(options)) do
             doc.litleTxnId(transaction_id)
+            doc.amount(money) if void_type(kind) == :authReversal
           end
         end
 
@@ -290,11 +291,11 @@ module ActiveMerchant #:nodoc:
         parsed
       end
 
-      def commit(kind, request)
+      def commit(kind, request, money=nil)
         parsed = parse(kind, ssl_post(url, request, headers))
 
         options = {
-          authorization: authorization_from(kind, parsed),
+          authorization: authorization_from(kind, parsed, money),
           test: test?,
           :avs_result => { :code => AVS_RESPONSE_CODE[parsed[:fraudResult_avsResult]] },
           :cvv_result => parsed[:fraudResult_cardValidationResult]
@@ -308,13 +309,13 @@ module ActiveMerchant #:nodoc:
         %w(000 801 802).include?(parsed[:response])
       end
 
-      def authorization_from(kind, parsed)
-        (kind == :registerToken) ? parsed[:litleToken] : "#{parsed[:litleTxnId]};#{kind}"
+      def authorization_from(kind, parsed, money)
+        (kind == :registerToken) ? parsed[:litleToken] : "#{parsed[:litleTxnId]};#{kind};#{money}"
       end
 
       def split_authorization(authorization)
-        transaction_id, kind = authorization.to_s.split(';')
-        [transaction_id, kind]
+        transaction_id, kind, money = authorization.to_s.split(';')
+        [transaction_id, kind, money]
       end
 
       def transaction_attributes(options)
