@@ -23,6 +23,7 @@
 * SagePay: Fix truncation [duff]
 * CyberSource: Use localized_amount [curiousepic]
 * CyberSource, Paymill, Payflow: Add verify_credentials [duff]
+* Litle: Retain amount to send in auth reversals [curiousepic]
 
 == Version 1.60.0 (July 4, 2016)
 * Orbital: Fix CC num leak on profile calls [drewblas]
